--- a/CSS.css
+++ b/CSS.css
@@ -1,5 +1,8 @@
 
 body{
+
+font-family: 'Merriweather Sans', serif;
+color:white;
 background: #457fca; /* fallback for old browsers */
 background: -webkit-linear-gradient(to left, #457fca , #5691c8); /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to left, #457fca , #5691c8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -28,7 +31,7 @@ background: linear-gradient(to left, #457fca , #5691c8); /* W3C, IE 10+/ Edge, F
 
 		position: relative;
 		height: 465px;
-		font-family: 'Shrikhand', cursive;
+		
 
 		
 		background-size: 100%;
@@ -36,9 +39,18 @@ background: linear-gradient(to left, #457fca , #5691c8); /* W3C, IE 10+/ Edge, F
 
 	
 }
+.SecHead{
+	color:white;
+	font-family:'Lato', Aller, sans-serif;
+	margin-top: 20px;
+
+}
 .allHead{
+	
+	color:white;
+	font-family:'Lato', Aller, sans-serif;
 	margin-left: 120px;
-	margin-top: 90px;
+	margin-top: 100px;
 }
 
 
